# mystore

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/2021-06-26-145444_create_products/: up.sql
migrations/2021-07-01-001522_create_users/: up.sql
src/: db_connection.rs  main.rs
src/handlers/: products.rs
src/models/: product.rs
