[package]
name = "app"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = "1.0.0-beta"
diesel = { version = "1.0.0", features = ["postgres", "r2d2" ,"chrono"] }
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = "6"
bcrypt = "0.4.0"
chrono = { version = "0.4.6", features = ["serde"] }
csrf-token = { git = "https://github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }
